--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@iconify/vue": "^3.2.1",
-    "@nuxt/content": "npm:@nuxt/content-edge@latest",
+    "@iconify/vue": "^4.0.2",
+    "@nuxt/content": "^2.2.2",
     "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/tailwindcss": "^5.1.3",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/typography": "^0.5.2",
     "eslint": "^8.18.0",
     "gh-pages": "^4.0.0",
-    "nuxt": "npm:nuxt3@latest",
+    "nuxt": "^3.0.0",
     "typescript": "^4.7.4"
   }
 }
